--- a/aboutus.css
+++ b/aboutus.css
@@ -6,7 +6,35 @@
     grid-row-gap: 0px;
     }
     
+    /*Div 1 icon and logo*/
     .div1 { grid-area: 1 / 1 / 2 / 2; }
+
+    .div1 {
+        grid-area: 1 / 1 / 2 / 2;
+        background-color: #00385a;
+        justify-content: center;
+        font-family: cursive;
+        color: white;
+        font-size: 10px;
+        height: 50px;
+        width: 100%;
+    }
+
+    .div1 h1 {
+        position: absolute;
+        top: 3%;
+        left: 24%;
+        transform: translate(-50%, -50%);
+        padding: 10px;
+    }
+
+    .div1 img {
+        position: absolute;
+        display: flex;
+        top: 15%;
+        left: 8%;
+        transform: translate(-50%, -50%);
+    }
 
     /*Div 2 Nav*/
     .div2 { grid-area: 1 / 2 / 2 / 3; }
