--- a/aboutus.css
+++ b/aboutus.css
@@ -20,3 +20,13 @@
     display: flex;
     font-style: oblique;
     }
+
+    .Cameron h1 {
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        color: white;
+    }
+
+    .Cameron p {
+        background-color: white;
+        color: black;
+    }
