--- a/index.css
+++ b/index.css
@@ -380,7 +380,19 @@ text-align: center;
                 color: white;
             }
 
+            .Cameron{
+                display: flex;
+            }
             
+                .Cameron h1 {
+                    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+                    color: white;
+                }
+            
+                .Cameron p {
+                    background-color: white;
+                    color: black;
+                }
 
 
 
