--- a/index.css
+++ b/index.css
@@ -390,6 +390,7 @@ text-align: center;
                 .Cameron p {
                     background-color: white;
                     color: black;
+                    font-size: 30px;
                 }
 
 
