--- a/index.css
+++ b/index.css
@@ -391,6 +391,7 @@ text-align: center;
                     background-color: white;
                     color: black;
                     font-size: 30px;
+                    width: 510px;
                 }
 
 
